fix mobile layout issues

--- a/_sass/min.scss
+++ b/_sass/min.scss
@@ -24,6 +24,7 @@ body {
     position: absolute;
     background: #FFF;
     top: 0;
+    border-radius: 0 0 .25rem .25rem;
     img {
       width: 120px;
     }
@@ -56,5 +57,11 @@ body {
 .material-icons {
   &.medium {
     font-size: 32px;
+  }
+}
+
+@include media-breakpoint-between(sm, md) {
+  .card-deck .card {
+    flex: 0 0 95%;
   }
 }
